--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "author": "Michael Jackson <mjijackson@gmail.com>",
     "name": "experiment",
     "description": "A simple framework for running UI experiments in web apps",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "repository": {
-        "url": ""
+        "type": "git",
+        "url": "git://github.com/mjijackson/experiment.git"
     },
     "main": "lib",
     "scripts": {
@@ -14,13 +15,11 @@
         "node": "~0.4.7"
     },
     "dependencies": {
-        "usererror": "1.0.0",
-        "strata": "~0.7.0",
-        "mysql": "0.9.4",
-        "sprintf": "0.1.1"
+        "usererror": "1.0.1"
     },
     "devDependencies": {
-        "vows": "0.5.12"
+        "vows": "0.5.12",
+        "ejs": "0.5.0"
     },
     "private": true
 }
