--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "devDependencies": {
         "vows": "0.6.0",
-        "ejs": "0.5.0"
+        "mustache": "0.3.1-dev"
     },
     "private": true
 }
