--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "devDependencies": {
         "vows": "0.6.0",
-        "mustache": "0.3.1-dev"
+        "mustache": "0.3.1-dev",
         "ejs": "0.5.0",
         "eco": "1.1.0-rc-1"
     },
